--- a/docs/issues/2024-02.rst
+++ b/docs/issues/2024-02.rst
@@ -95,6 +95,9 @@ Doctrinaire
 `Simulation Based Bayesian Optimization <https://arxiv.org/pdf/2401.10811.pdf>`_
     Introduces a Bayesian optimization method for acquiistion functions which require sampling from the posterior.  Definitely has a fullly Byesian model in mind, but we might be able to wrangle this into shape for jumping between CAD models in optimzation.
 
+`Do You Guys Want to Dance: Zero-Shot Compositional Human Dance Generation with Multiple Persons <https://arxiv.org/pdf/2401.13363.pdf>`_
+    Takes a picture of a person/people it has never seen before, a background, and reference poses it can render the person in those poses on that background.  Uses latent diffusion models.  If we can do this with vehicles and articulations we are getting pretty close to one-shot capabilities for Doctrinaire/TA2
+
 Reasoning
 ---------
 
@@ -131,6 +134,9 @@ Datasets
 
 `Objects With Lighting: A Real-World Dataset for Evaluating Reconstruction and Rendering for Object Relighting <https://arxiv.org/pdf/2401.09126.pdf>`_
     New, real world, dataset for the inverse rendering problem and a baseline method.  Some co-authors are from Intel, Adobe, and NVIDIA.  Plausibly useful.
+
+`Open-source data pipeline for street-view images: a case study on community mobility during COVID-19 pandemic <https://arxiv.org/pdf/2401.13087.pdf>`_
+    Designs and makes available an open-source pipeline for turning 360 degree streetview data (from cars) into useable datasets.  They link to a github, but it doesn't seem like they make the data open source?
 
 Potpurrie
 ---------
